# Movie-Recommendation-System

client/: .gitignore  App.js  app.json  package-lock.json  package.json
client/src/navigation/: AppNavigator.js
client/src/screens/: CreateAccountScreen.js  HomeScreen.js  LoginScreen.js
client/src/services/: get_token.py
server/MovieServerApp/: CMakeLists.txt
server/MovieServerApp/MovieServer/: CMakeLists.txt  MovieServer.cpp  MovieServer.h
server/MovieServerApp/MovieServer/include/: config.h  create_account.h  home.h  login.h  reccomend.h  router.h  user.h  utils.h
server/MovieServerApp/MovieServer/installed/vcpkg/: compiler-file-hash-cache.json  status
server/MovieServerApp/MovieServer/installed/x64-windows/debug/lib/: cpr.lib  libcurl-d.lib  zlibd.lib
server/MovieServerApp/MovieServer/installed/x64-windows/lib/: cpr.lib  libcurl.lib
server/MovieServerApp/MovieServer/installed/x64-windows/share/cpr/: cprTargets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
server/MovieServerApp/MovieServer/installed/x64-windows/share/curl/: vcpkg.spdx.json  vcpkg_abi_info.txt
server/MovieServerApp/MovieServer/installed/x64-windows/share/nlohmann-json/: vcpkg.spdx.json  vcpkg_abi_info.txt
server/MovieServerApp/MovieServer/installed/x64-windows/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
server/MovieServerApp/MovieServer/installed/x64-windows/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
server/MovieServerApp/MovieServer/installed/x64-windows/share/zlib/: vcpkg.spdx.json  vcpkg_abi_info.txt
server/MovieServerApp/MovieServer/src/: login.cpp
server/MovieServerApp/MovieServer/src/routes/: create_account.cpp  home.cpp  login.cpp  recommend.cpp  router.cpp
